# Horoscope

./: .dockerignore  .gitignore  OBJECTIVES_AND_STATUS.md  README.md
.github/workflows/: platform.yml
docs/: horoscope-mcp.md  mcp.md  panchang-engine-and-local-muhurta-agent.md  platform-architecture.md  rust-engine.md  rust-parity.md  south-indian-horoscope-mcp-plan.md
infra/: README.md
infra/bicep/: main.bicep
rust/: Cargo.toml
rust/crates/horoscope-core/: Cargo.toml
rust/crates/horoscope-core/src/: lib.rs  output.rs  vimshottari.rs
rust/crates/horoscope-mcp/: Cargo.toml  Dockerfile
rust/crates/horoscope-mcp/src/: main.rs
rust/crates/muhurta-api/: Cargo.toml  Dockerfile
rust/crates/muhurta-api/src/: main.rs
rust/crates/muhurta-engine/: Cargo.toml
rust/crates/muhurta-engine/src/: client.rs  lib.rs  search.rs  types.rs
rust/crates/muhurta-engine/tests/: smoke.rs
rust/crates/panchang-api/: Cargo.toml  Dockerfile
rust/crates/panchang-api/src/: main.rs
rust/crates/panchang-core/: Cargo.toml
rust/crates/panchang-core/src/: angas.rs  ayanamsha.rs  boundaries.rs  day_segments.rs  ephemeris.rs  hora.rs  lib.rs  meeus_tables.rs  muhurta.rs  names.rs  planets_jpl.rs  rise_set.rs  time.rs  types.rs
rust/crates/panchang-core/tests/: core_smoke.rs
rust/crates/panchang-golden/: Cargo.toml
rust/crates/panchang-golden/fixtures/: snapshots.json
rust/crates/panchang-golden/src/: main.rs
rust/crates/panchang-mcp/: Cargo.toml  Dockerfile
rust/crates/panchang-mcp/src/: main.rs
scripts/: restart-api.sh
web/: Dockerfile  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/horoscope/basic/: route.ts
web/app/api/location/geocode/: route.ts
web/app/api/location/reverse/: route.ts
web/app/api/muhurta/search/: route.ts
web/app/api/panchang/civil-day/: route.ts
web/app/api/panchang/day/: route.ts
web/app/api/panchang/month/: route.ts
web/app/api/panchang/snapshot/: route.ts
web/app/components/: AuspiciousView.tsx  HoroscopeView.tsx  PanchangApp.tsx
web/app/lib/: api.ts  location.ts  muhurtaParse.ts  panchangDayFallback.ts  serverApi.ts  types-shims.d.ts
