[workspace]
resolver = "2"
members = [
    "crates/panchang-core",
    "crates/panchang-api",
    "crates/panchang-mcp",
    "crates/panchang-golden",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/example/horoscope-panchang"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
