[package]
name = "horoscope-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
panchang-core = { path = "../panchang-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
