[package]
name = "panchang-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
utoipa.workspace = true

[dev-dependencies]
serde_json.workspace = true
